cbc - chart/range position updates https://app.asana.com/0/7908989541876/7906899007998

--- a/css-sass/_cssgrids-responsive.scss
+++ b/css-sass/_cssgrids-responsive.scss
@@ -190,8 +190,7 @@
 }
 
 /* desktop */
-@media (min-width:$mq-desktop),
-       (min-width:$mq-tablet) and (max-width:($mq-desktop - 1px)) {
+@media (min-width:($mq-tablet)) {
     .yui3-visible-phone {
         display: none !important;
     }
