--- a/js/template/subtest/Range.html
+++ b/js/template/subtest/Range.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="label">
-                Expected Range {{range.minimum}}-{{range.maximum}} {{unit}}
+                <span class="limits">Expected Range {{range.minimum}}-{{range.maximum}}</span> <span class="unit">{{unit}}</span>
             </div>
         <div>
     </div>
