--- a/js/template/test/CompleteBloodCount.html
+++ b/js/template/test/CompleteBloodCount.html
@@ -21,7 +21,7 @@
 
         <div class="test-section-inner-with-icon desktop-only last">
 			<div class="yui3-g-r">
-				<div class="yui3-u-1-2">
+				<div class="yui3-u-1-2 yui3-u-13-24-small-tablet">
 					<div class="yui3-u-c">
 						<div class="chart">
 							<div class="diagram"></div>
@@ -36,9 +36,9 @@
 					</div>
 				</div>
 
-				<div class="yui3-u-1-2">
+				<div class="yui3-u-1-2 yui3-u-11-24-small-tablet">
 					<div class="yui3-u-c">
-						<div class="range"></div>
+						<div class="range-container"></div>
 					</div>
 				</div>
 			</div>
@@ -66,7 +66,7 @@
 
         <div class="test-section-inner-with-icon desktop-only last">
 			<div class="yui3-g-r">
-				<div class="yui3-u-1-2">
+				<div class="yui3-u-1-2 yui3-u-13-24-small-tablet">
 					<div class="yui3-u-c">
 						<div class="chart">
 							<div class="diagram"></div>
@@ -81,9 +81,9 @@
 					</div>
 				</div>
 
-				<div class="yui3-u-1-2">
+				<div class="yui3-u-1-2 yui3-u-11-24-small-tablet">
 					<div class="yui3-u-c">
-						<div class="range"></div>
+						<div class="range-container"></div>
 					</div>
 				</div>
 			</div>
@@ -111,7 +111,7 @@
 
         <div class="test-section-inner-with-icon desktop-only last">
 			<div class="yui3-g-r">
-				<div class="yui3-u-1-2">
+				<div class="yui3-u-1-2 yui3-u-13-24-small-tablet">
 					<div class="yui3-u-c">
 						<div class="chart">
 							<div class="diagram"></div>
@@ -126,9 +126,9 @@
 					</div>
 				</div>
 
-				<div class="yui3-u-1-2">
+				<div class="yui3-u-1-2 yui3-u-11-24-small-tablet">
 					<div class="yui3-u-c">
-						<div class="range"></div>
+						<div class="range-container"></div>
 					</div>
 				</div>
 			</div>
