--- a/css-sass/view/subtest/_range.scss
+++ b/css-sass/view/subtest/_range.scss
@@ -2,9 +2,7 @@
     @include secondaryFont;
 
     .wrapper {
-        max-width: 235px;
         position: relative;
-        margin: 0 auto;
     }
 
     $markerWidth: 200px;
@@ -117,9 +115,12 @@
             color: #444;
             padding-top: 6px;
             text-align: center;
-            text-transform: uppercase;
             font-size: 77%;
             font-weight: bold;
+
+            .limits {
+                text-transform: uppercase;
+            }
         }
     }
 
