widget/_test-subsection: fixed padding https://app.asana.com/0/7908989541876/7949672492383

--- a/css-sass/view/widget/_test-subsection.scss
+++ b/css-sass/view/widget/_test-subsection.scss
@@ -4,7 +4,12 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 
-    padding: 0 20px 0 140px;
+    padding: 0 20px 0 160px;
+
+    /* tablet */
+    @media (min-width:($mq-phone + 1px)) and (max-width:($mq-tablet - 1px)) {
+        padding-left: 140px;
+    }
 
     /* Phone */
     @media (max-width:$mq-phone) {
