--- a/css/screen.css
+++ b/css/screen.css
@@ -4293,8 +4293,14 @@ span.placeholder {
   border-top: 1px dotted #b2b2b2;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  padding: 0 20px 0 140px;
+  padding: 0 20px 0 160px;
+  /* tablet */
   /* Phone */
+}
+@media (min-width: 631px) and (max-width: 768px) {
+  .view-widget-test-subsection {
+    padding-left: 140px;
+  }
 }
 @media (max-width: 630px) {
   .view-widget-test-subsection {
