range/pie updated background color https://app.asana.com/0/7908989541876/8008809443374

--- a/css-sass/view/subtest/_range.scss
+++ b/css-sass/view/subtest/_range.scss
@@ -7,7 +7,7 @@
 
     $markerWidth: 200px;
     $pointerWidth: 40px;
-    $rangeBgColor: #ebedf1;
+    $rangeBgColor: #e8eae5;
 
     .marker {
         position: absolute;
