t4: updated styles https://app.asana.com/0/7908989541876/7953393041166

--- a/css-sass/view/subtest/_range.scss
+++ b/css-sass/view/subtest/_range.scss
@@ -147,4 +147,16 @@
     .description {
         display: none;
     }
+
+    &.single-line-label {
+        .marker {
+            .unit {
+                display: inline;
+            }
+        }
+
+        .actual {
+            padding-top: 68px;
+        }
+    }
 }
