--- a/js/template/subtest/Range.html
+++ b/js/template/subtest/Range.html
@@ -1,4 +1,4 @@
-<div class="view-subtest-range skin-{{skin}}">
+<div class="view-subtest-range {{classes}}">
 
     <div class="wrapper">
         <div class="marker">
