t4: center on phone

--- a/css-sass/view/test/_thyroxine.scss
+++ b/css-sass/view/test/_thyroxine.scss
@@ -3,5 +3,10 @@
 .view-test-thyroxine {
     .subtest-container {
         max-width: 300px;
+
+        /* phone */
+        @media (max-width:$mq-phone) {
+            margin: 0 auto;
+        }
     }
 }
