urine - appearance - moved clear loupe to the right on phone so that it is not cut off https://app.asana.com/0/7908989541876/7940345242289

--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -112,7 +112,14 @@
                     display: block;
                 }
 
-                &.clear {left: -7%;}
+                &.clear {
+                    left: -7%;
+
+                    /* phone */
+                    @media (max-width:$mq-phone) {
+                        left: -3%;
+                    }
+                }
                 &.clear-with-particles {left: 5%;}
                 &.slightly-hazy {left: 16%;}
                 &.hazy {left: 27%;}
