--- a/css-sass/view/widget/_test-subsection.scss
+++ b/css-sass/view/widget/_test-subsection.scss
@@ -1,6 +1,8 @@
 .view-widget-test-subsection {
 	background-color: #f7f8f6;
-	border-top: 1px dotted #b2b2b2;
+    background-image: url("../images/widget/test-subsection/border-dotted.png");
+    background-repeat: repeat-x;
+    
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 
