--- a/css/screen.css
+++ b/css/screen.css
@@ -4312,7 +4312,8 @@ span.placeholder {
 
 .view-widget-test-subsection {
   background-color: #f7f8f6;
-  border-top: 1px dotted #b2b2b2;
+  background-image: url("../images/widget/test-subsection/border-dotted.png");
+  background-repeat: repeat-x;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   padding: 0 20px 0 160px;
