--- a/css-sass/screen.scss
+++ b/css-sass/screen.scss
@@ -73,3 +73,6 @@ $max-page-width: 1000px;
 @import "view/widget/busy";
 @import "view/widget/test-overview";
 @import "view/widget/test-subsection";
+
+// animations
+@import "view/animation/base";
