--- a/css/screen.css
+++ b/css/screen.css
@@ -4371,3 +4371,593 @@ span.placeholder {
 .view-widget-test-subsection.expanded > .body {
   display: block;
 }
+
+/*
+html, body {
+    margin: 30px 0;
+    @include transition(all 400ms ease);
+}
+*/
+/*
+button {
+    height:48px;
+    width:300px;
+}
+*/
+.animation {
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  height: 1024px;
+  width: 100%;
+  background: transparent;
+}
+.animation .background.heartworm {
+  background-color: #D53F36;
+  width: 100%;
+  height: 100%;
+}
+.animation .background.heartworm .sticker {
+  width: 430px;
+  margin: 0 auto;
+  min-height: 500px;
+  position: relative;
+  z-index: 0;
+}
+.animation .background.heartworm .sticker img {
+  position: absolute;
+  margin: 0 auto;
+  text-align: center;
+  z-index: 3;
+  left: 22.3%;
+  top: 16.3%;
+}
+.animation .background.heartworm .sticker img.heart {
+  left: 33.3%;
+  top: 28%;
+}
+.animation .background.heartworm .sticker img.leftwing {
+  left: 51%;
+  top: 55%;
+}
+.animation .background.heartworm .sticker img.rightwing {
+  left: 83%;
+  top: 55%;
+}
+.animation .background.heartworm .sticker.active .heart {
+  -webkit-animation-delay: 0ms;
+  -webkit-animation-duration: 1000ms;
+  -webkit-animation-name: heartbeat2;
+  -webkit-animation-iteration-count: 3;
+  -webkit-animation-timing-function: cubic-bezier(0, 1.49, 0.13, 0.95);
+  -moz-animation-delay: 0ms;
+  -moz-animation-duration: 1000ms;
+  -moz-animation-name: heartbeat2;
+  -moz-animation-iteration-count: 3;
+  -moz-animation-timing-function: cubic-bezier(0, 1.49, 0.13, 0.95);
+  -ms-animation-delay: 0ms;
+  -ms-animation-duration: 1000ms;
+  -ms-animation-name: heartbeat2;
+  -ms-animation-iteration-count: 3;
+  -ms-animation-timing-function: cubic-bezier(0, 1.49, 0.13, 0.95);
+  -o-animation-delay: 0ms;
+  -o-animation-duration: 1000ms;
+  -o-animation-name: heartbeat2;
+  -o-animation-iteration-count: 3;
+  -o-animation-timing-function: cubic-bezier(0, 1.49, 0.13, 0.95);
+  animation-delay: 0ms;
+  animation-duration: 1000ms;
+  animation-name: heartbeat2;
+  animation-iteration-count: 3;
+  animation-timing-function: cubic-bezier(0, 1.49, 0.13, 0.95);
+  -webkit-animation-fill-mode: forwards;
+  -moz-animation-fill-mode: forwards;
+  -o-animation-fill-mode: forwards;
+  -ms-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
+  -ms-perspective: 1000px;
+  -o-perspective: 1000px;
+  perspective: 1000px;
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+}
+.animation .background.heartworm .sticker.active .leftwing {
+  -webkit-animation-delay: 0ms;
+  -webkit-animation-duration: 200ms;
+  -webkit-animation-name: mosqito-left;
+  -webkit-animation-iteration-count: 15;
+  -webkit-animation-timing-function: ease;
+  -moz-animation-delay: 0ms;
+  -moz-animation-duration: 200ms;
+  -moz-animation-name: mosqito-left;
+  -moz-animation-iteration-count: 15;
+  -moz-animation-timing-function: ease;
+  -ms-animation-delay: 0ms;
+  -ms-animation-duration: 200ms;
+  -ms-animation-name: mosqito-left;
+  -ms-animation-iteration-count: 15;
+  -ms-animation-timing-function: ease;
+  -o-animation-delay: 0ms;
+  -o-animation-duration: 200ms;
+  -o-animation-name: mosqito-left;
+  -o-animation-iteration-count: 15;
+  -o-animation-timing-function: ease;
+  animation-delay: 0ms;
+  animation-duration: 200ms;
+  animation-name: mosqito-left;
+  animation-iteration-count: 15;
+  animation-timing-function: ease;
+  -webkit-transform-origin: 100% 30%;
+  -moz-transform-origin: 100% 30%;
+  -ms-transform-origin: 100% 30%;
+  -o-transform-origin: 100% 30%;
+  transform-origin: 100% 30%;
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
+  -ms-perspective: 1000px;
+  -o-perspective: 1000px;
+  perspective: 1000px;
+}
+.animation .background.heartworm .sticker.active .rightwing {
+  -webkit-transform-origin: 0% 30%;
+  -moz-transform-origin: 0% 30%;
+  -ms-transform-origin: 0% 30%;
+  -o-transform-origin: 0% 30%;
+  transform-origin: 0% 30%;
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
+  -ms-perspective: 1000px;
+  -o-perspective: 1000px;
+  perspective: 1000px;
+  -webkit-animation-delay: 0ms;
+  -webkit-animation-duration: 200ms;
+  -webkit-animation-name: mosqito-right;
+  -webkit-animation-iteration-count: 15;
+  -webkit-animation-timing-function: ease;
+  -moz-animation-delay: 0ms;
+  -moz-animation-duration: 200ms;
+  -moz-animation-name: mosqito-right;
+  -moz-animation-iteration-count: 15;
+  -moz-animation-timing-function: ease;
+  -ms-animation-delay: 0ms;
+  -ms-animation-duration: 200ms;
+  -ms-animation-name: mosqito-right;
+  -ms-animation-iteration-count: 15;
+  -ms-animation-timing-function: ease;
+  -o-animation-delay: 0ms;
+  -o-animation-duration: 200ms;
+  -o-animation-name: mosqito-right;
+  -o-animation-iteration-count: 15;
+  -o-animation-timing-function: ease;
+  animation-delay: 0ms;
+  animation-duration: 200ms;
+  animation-name: mosqito-right;
+  animation-iteration-count: 15;
+  animation-timing-function: ease;
+}
+
+@-webkit-keyframes heartbeat {
+  0%, 100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+
+  25% {
+    -webkit-transform: scale(0.9);
+    -moz-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -o-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+
+  30% {
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
+  }
+
+  80% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@-moz-keyframes heartbeat {
+  0%, 100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+
+  25% {
+    -webkit-transform: scale(0.9);
+    -moz-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -o-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+
+  30% {
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
+  }
+
+  80% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@-ms-keyframes heartbeat {
+  0%, 100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+
+  25% {
+    -webkit-transform: scale(0.9);
+    -moz-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -o-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+
+  30% {
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
+  }
+
+  80% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes heartbeat {
+  0%, 100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+
+  25% {
+    -webkit-transform: scale(0.9);
+    -moz-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -o-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+
+  30% {
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
+  }
+
+  80% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@-webkit-keyframes heartbeat2 {
+  0%, 100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+
+  33% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+
+  44% {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  66% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@-moz-keyframes heartbeat2 {
+  0%, 100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+
+  33% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+
+  44% {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  66% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@-ms-keyframes heartbeat2 {
+  0%, 100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+
+  33% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+
+  44% {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  66% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes heartbeat2 {
+  0%, 100% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+
+  33% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+
+  44% {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  66% {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@-webkit-keyframes mosqito-left {
+  0%, 100% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  50% {
+    -webkit-transform: rotate(10deg);
+    -moz-transform: rotate(10deg);
+    -ms-transform: rotate(10deg);
+    -o-transform: rotate(10deg);
+    transform: rotate(10deg);
+  }
+}
+
+@-moz-keyframes mosqito-left {
+  0%, 100% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  50% {
+    -webkit-transform: rotate(10deg);
+    -moz-transform: rotate(10deg);
+    -ms-transform: rotate(10deg);
+    -o-transform: rotate(10deg);
+    transform: rotate(10deg);
+  }
+}
+
+@-ms-keyframes mosqito-left {
+  0%, 100% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  50% {
+    -webkit-transform: rotate(10deg);
+    -moz-transform: rotate(10deg);
+    -ms-transform: rotate(10deg);
+    -o-transform: rotate(10deg);
+    transform: rotate(10deg);
+  }
+}
+
+@keyframes mosqito-left {
+  0%, 100% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  50% {
+    -webkit-transform: rotate(10deg);
+    -moz-transform: rotate(10deg);
+    -ms-transform: rotate(10deg);
+    -o-transform: rotate(10deg);
+    transform: rotate(10deg);
+  }
+}
+
+@-webkit-keyframes mosqito-right {
+  0%, 100% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  50% {
+    -webkit-transform: rotate(-10deg);
+    -moz-transform: rotate(-10deg);
+    -ms-transform: rotate(-10deg);
+    -o-transform: rotate(-10deg);
+    transform: rotate(-10deg);
+  }
+}
+
+@-moz-keyframes mosqito-right {
+  0%, 100% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  50% {
+    -webkit-transform: rotate(-10deg);
+    -moz-transform: rotate(-10deg);
+    -ms-transform: rotate(-10deg);
+    -o-transform: rotate(-10deg);
+    transform: rotate(-10deg);
+  }
+}
+
+@-ms-keyframes mosqito-right {
+  0%, 100% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  50% {
+    -webkit-transform: rotate(-10deg);
+    -moz-transform: rotate(-10deg);
+    -ms-transform: rotate(-10deg);
+    -o-transform: rotate(-10deg);
+    transform: rotate(-10deg);
+  }
+}
+
+@keyframes mosqito-right {
+  0%, 100% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  50% {
+    -webkit-transform: rotate(-10deg);
+    -moz-transform: rotate(-10deg);
+    -ms-transform: rotate(-10deg);
+    -o-transform: rotate(-10deg);
+    transform: rotate(-10deg);
+  }
+}
+
+.animation {
+  width: 100%;
+}
