--- a/js/template/widget/TestOverview.html
+++ b/js/template/widget/TestOverview.html
@@ -15,6 +15,7 @@
                 <div class="yui3-u-c">
                     <div class="diagram-container">
                         <div class="inner">
+                            <div class="animation"></div>
                             <img class="diagram" src="images/test/{{type}}/{{diagramFilename}}" />
                         </div>
                     </div>
