--- a/js/template/animation/Heartworm.html
+++ b/js/template/animation/Heartworm.html
@@ -1,8 +1,8 @@
 <div class="background heartworm">
 	<div class="sticker">
-		<img src="images/animation/heartworm/1x/background.png" alt="">
-		<img src="images/animation/heartworm/1x/heart.png" class="heart" alt="">
-		<img src="images/animation/heartworm/1x/left-wing.png" class="leftwing" alt="">
-		<img src="images/animation/heartworm/1x/right-wing.png" class="rightwing" alt="">
+		<img src="images/animation/heartworm/2x/background-2x.png" class="bg" alt="">
+		<img src="images/animation/heartworm/2x/heart-2x.png" class="part heart" alt="">
+		<img src="images/animation/heartworm/2x/left-wing-2x.png" class="part leftwing" alt="">
+		<img src="images/animation/heartworm/2x/right-wing-2x.png" class="part rightwing" alt="">
 	</div>
 </div>
