--- a/css-sass/view/animation/_base.scss
+++ b/css-sass/view/animation/_base.scss
@@ -1,54 +1,10 @@
 @import "compass/css3/transform";
-/*
-html, body {
-    margin: 30px 0;
-    @include transition(all 400ms ease);
-}
-*/
+
 @mixin opacity ( $value: 0.5 ) {
   opacity: $value;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" $value * 100 ")";
   filter: alpha(opacity= $value * 100 );
   zoom: 1;
-}
-/*
-button {
-    height:48px;
-    width:300px;
-}
-*/
-@mixin cbc_cat () {
-	width:441px;
-	height:309px;
-}
-
-@mixin urine () {
-	width:466px;
-	height:318px;
-}
-@mixin chemistry () {
-	width: 356px;
-	height:320px;
-}
-@mixin accuplex () {
-	width: 365px;
-	height:329px;
-}
-@mixin o_and_p () {
-	width: 356px;
-	height: 297px;
-}
-@mixin heartworm () {
-	width: 374px;
-	height:308px;
-}
-@mixin felv () {
-	width: 314px;
-	height: 326px;
-}
-@mixin t4l () {
-	width: 324px;
-	height:285px;
 }
 
 @mixin keyframes ($animation_name) {
@@ -135,7 +91,7 @@ button {
 //@import "cbc_dog";
 //@import "cbc_cat";
 //@import "ova";
-//@import "accuplex";
+@import "accuplex";
 //@import "felv";
 //@import "felvalternate";
 //@import "t4";
