cbc - animation - added

--- a/css-sass/view/animation/_base.scss
+++ b/css-sass/view/animation/_base.scss
@@ -88,8 +88,7 @@
 
 //@import "urine";
 //@import "chemistry";
-//@import "cbc_dog";
-//@import "cbc_cat";
+@import "cbc";
 //@import "ova";
 @import "accuplex";
 //@import "felv";
