--- a/css/screen.css
+++ b/css/screen.css
@@ -4372,6 +4372,76 @@ span.placeholder {
   display: block;
 }
 
+.background.cbc {
+  max-width: 338px;
+  margin: 0 9% 0 24%;
+}
+.background.cbc .sticker {
+  position: relative;
+  z-index: 0;
+}
+.background.cbc .sticker .circle {
+  display: block;
+}
+.background.cbc .sticker .part {
+  position: absolute;
+  z-index: 3;
+}
+.background.cbc .sticker .part.animal {
+  width: 96%;
+  left: 0;
+  top: 0;
+}
+.background.cbc .sticker .part.bandaid, .background.cbc .sticker .part.battery, .background.cbc .sticker .part.shield {
+  width: 29%;
+  left: 35%;
+  top: 34%;
+}
+.background.cbc .sticker.active .animal {
+  -webkit-transition: all 900ms cubic-bezier(0.17, 0.26, 0.1, 1.2);
+  -moz-transition: all 900ms cubic-bezier(0.17, 0.26, 0.1, 1.2);
+  -o-transition: all 900ms cubic-bezier(0.17, 0.26, 0.1, 1.2);
+  transition: all 900ms cubic-bezier(0.17, 0.26, 0.1, 1.2);
+  left: -35%;
+}
+.background.cbc .sticker.active .bandaid {
+  -webkit-transition: all 400ms cubic-bezier(0.17, 0.26, 0.1, 1.61);
+  -moz-transition: all 400ms cubic-bezier(0.17, 0.26, 0.1, 1.61);
+  -o-transition: all 400ms cubic-bezier(0.17, 0.26, 0.1, 1.61);
+  transition: all 400ms cubic-bezier(0.17, 0.26, 0.1, 1.61);
+  opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" 100 ")";
+  filter: alpha(opacity=100);
+  zoom: 1;
+  left: 69%;
+  top: 68%;
+}
+.background.cbc .sticker.active .battery {
+  -webkit-transition: all 400ms 450ms;
+  -webkit-transition-delay: cubic-bezier(0.17, 0.26, 0.1, 1.61);
+  -moz-transition: all 400ms 450ms cubic-bezier(0.17, 0.26, 0.1, 1.61);
+  -o-transition: all 400ms 450ms cubic-bezier(0.17, 0.26, 0.1, 1.61);
+  transition: all 400ms 450ms cubic-bezier(0.17, 0.26, 0.1, 1.61);
+  opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" 100 ")";
+  filter: alpha(opacity=100);
+  zoom: 1;
+  top: 0;
+  left: 72%;
+}
+.background.cbc .sticker.active .shield {
+  -webkit-transition: all 400ms 250ms;
+  -webkit-transition-delay: cubic-bezier(0.17, 0.26, 0.1, 1.61);
+  -moz-transition: all 400ms 250ms cubic-bezier(0.17, 0.26, 0.1, 1.61);
+  -o-transition: all 400ms 250ms cubic-bezier(0.17, 0.26, 0.1, 1.61);
+  transition: all 400ms 250ms cubic-bezier(0.17, 0.26, 0.1, 1.61);
+  opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" 100 ")";
+  filter: alpha(opacity=100);
+  zoom: 1;
+  left: 83%;
+}
+
 .background.accuplex {
   max-width: 267px;
   margin: 12%;
