ova - animation - added initial files

--- a/css-sass/view/animation/_base.scss
+++ b/css-sass/view/animation/_base.scss
@@ -89,7 +89,7 @@
 //@import "urine";
 //@import "chemistry";
 @import "cbc";
-//@import "ova";
+@import "ova-parasite";
 @import "accuplex";
 //@import "felv";
 //@import "felvalternate";
