--- a/css/screen.css
+++ b/css/screen.css
@@ -4442,6 +4442,417 @@ span.placeholder {
   left: 83%;
 }
 
+.animation {
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  height: 1024px;
+  width: 100%;
+  background: transparent;
+}
+.animation .background.ova {
+  background-color: #2E90F8;
+  width: 100%;
+  height: 100%;
+}
+.animation .background.ova .sticker {
+  width: 430px;
+  margin: 0 auto;
+  min-height: 500px;
+  position: relative;
+  z-index: 0;
+}
+.animation .background.ova .sticker img {
+  position: absolute;
+  margin: 0 auto;
+  text-align: center;
+  z-index: 3;
+  left: 22.3%;
+  top: 16.3%;
+}
+.animation .background.ova .sticker .lense {
+  width: 267px;
+  height: 266px;
+  left: 277px;
+  overflow: hidden;
+  position: relative;
+  top: 23px;
+  z-index: 4;
+  border-radius: 200px;
+}
+.animation .background.ova .sticker .lense img {
+  position: relative;
+  left: 0;
+  top: 0;
+  z-index: 0;
+}
+.animation .background.ova .sticker .lense .critters {
+  position: relative;
+  border-radius: 271px;
+  height: 235px;
+  width: 236px;
+  overflow: hidden;
+  top: -254px;
+  background-size: 410px 410px;
+  background-attachment: fixed;
+  background: #fff;
+  z-index: -1;
+  background-position: 100% 0%;
+  left: 17px;
+}
+.animation .background.ova .sticker .lense .critters .a {
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+  top: 100px;
+  left: 99px;
+}
+.animation .background.ova .sticker .lense .critters .b {
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+  top: 16px;
+  left: 84px;
+}
+.animation .background.ova .sticker .lense .critters .c {
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+  top: 32px;
+  left: -64px;
+}
+.animation .background.ova .sticker.active .lense .critters .a {
+  -webkit-animation-delay: 0;
+  -webkit-animation-duration: 10s;
+  -webkit-animation-name: bot-critter;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-delay: 0;
+  -moz-animation-duration: 10s;
+  -moz-animation-name: bot-critter;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-timing-function: linear;
+  -ms-animation-delay: 0;
+  -ms-animation-duration: 10s;
+  -ms-animation-name: bot-critter;
+  -ms-animation-iteration-count: 1;
+  -ms-animation-timing-function: linear;
+  -o-animation-delay: 0;
+  -o-animation-duration: 10s;
+  -o-animation-name: bot-critter;
+  -o-animation-iteration-count: 1;
+  -o-animation-timing-function: linear;
+  animation-delay: 0;
+  animation-duration: 10s;
+  animation-name: bot-critter;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+  -webkit-animation-fill-mode: forwards;
+  -moz-animation-fill-mode: forwards;
+  -o-animation-fill-mode: forwards;
+  -ms-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+}
+.animation .background.ova .sticker.active .lense .critters .b {
+  -webkit-animation-fill-mode: forwards;
+  -moz-animation-fill-mode: forwards;
+  -o-animation-fill-mode: forwards;
+  -ms-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: 0;
+  -webkit-animation-duration: 10s;
+  -webkit-animation-name: ri-critter;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-delay: 0;
+  -moz-animation-duration: 10s;
+  -moz-animation-name: ri-critter;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-timing-function: linear;
+  -ms-animation-delay: 0;
+  -ms-animation-duration: 10s;
+  -ms-animation-name: ri-critter;
+  -ms-animation-iteration-count: 1;
+  -ms-animation-timing-function: linear;
+  -o-animation-delay: 0;
+  -o-animation-duration: 10s;
+  -o-animation-name: ri-critter;
+  -o-animation-iteration-count: 1;
+  -o-animation-timing-function: linear;
+  animation-delay: 0;
+  animation-duration: 10s;
+  animation-name: ri-critter;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+}
+.animation .background.ova .sticker.active .lense .critters .c {
+  -webkit-animation-delay: 0;
+  -webkit-animation-duration: 10s;
+  -webkit-animation-name: big-critter;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-delay: 0;
+  -moz-animation-duration: 10s;
+  -moz-animation-name: big-critter;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-timing-function: linear;
+  -ms-animation-delay: 0;
+  -ms-animation-duration: 10s;
+  -ms-animation-name: big-critter;
+  -ms-animation-iteration-count: 1;
+  -ms-animation-timing-function: linear;
+  -o-animation-delay: 0;
+  -o-animation-duration: 10s;
+  -o-animation-name: big-critter;
+  -o-animation-iteration-count: 1;
+  -o-animation-timing-function: linear;
+  animation-delay: 0;
+  animation-duration: 10s;
+  animation-name: big-critter;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+  -webkit-animation-fill-mode: forwards;
+  -moz-animation-fill-mode: forwards;
+  -o-animation-fill-mode: forwards;
+  -ms-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes big-critter {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    top: 22px;
+    left: -82px;
+    -webkit-transform: rotate(-48deg);
+    -moz-transform: rotate(-48deg);
+    -ms-transform: rotate(-48deg);
+    -o-transform: rotate(-48deg);
+    transform: rotate(-48deg);
+  }
+}
+
+@-moz-keyframes big-critter {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    top: 22px;
+    left: -82px;
+    -webkit-transform: rotate(-48deg);
+    -moz-transform: rotate(-48deg);
+    -ms-transform: rotate(-48deg);
+    -o-transform: rotate(-48deg);
+    transform: rotate(-48deg);
+  }
+}
+
+@-ms-keyframes big-critter {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    top: 22px;
+    left: -82px;
+    -webkit-transform: rotate(-48deg);
+    -moz-transform: rotate(-48deg);
+    -ms-transform: rotate(-48deg);
+    -o-transform: rotate(-48deg);
+    transform: rotate(-48deg);
+  }
+}
+
+@keyframes big-critter {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    top: 22px;
+    left: -82px;
+    -webkit-transform: rotate(-48deg);
+    -moz-transform: rotate(-48deg);
+    -ms-transform: rotate(-48deg);
+    -o-transform: rotate(-48deg);
+    transform: rotate(-48deg);
+  }
+}
+
+@-webkit-keyframes ri-critter {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(92deg);
+    -moz-transform: rotate(92deg);
+    -ms-transform: rotate(92deg);
+    -o-transform: rotate(92deg);
+    transform: rotate(92deg);
+    top: 16px;
+    left: 130px;
+  }
+}
+
+@-moz-keyframes ri-critter {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(92deg);
+    -moz-transform: rotate(92deg);
+    -ms-transform: rotate(92deg);
+    -o-transform: rotate(92deg);
+    transform: rotate(92deg);
+    top: 16px;
+    left: 130px;
+  }
+}
+
+@-ms-keyframes ri-critter {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(92deg);
+    -moz-transform: rotate(92deg);
+    -ms-transform: rotate(92deg);
+    -o-transform: rotate(92deg);
+    transform: rotate(92deg);
+    top: 16px;
+    left: 130px;
+  }
+}
+
+@keyframes ri-critter {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(92deg);
+    -moz-transform: rotate(92deg);
+    -ms-transform: rotate(92deg);
+    -o-transform: rotate(92deg);
+    transform: rotate(92deg);
+    top: 16px;
+    left: 130px;
+  }
+}
+
+@-webkit-keyframes bot-critter {
+  0% {
+    top: 100px;
+    left: 99px;
+  }
+
+  100% {
+    top: 95px;
+    left: 64px;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+}
+
+@-moz-keyframes bot-critter {
+  0% {
+    top: 100px;
+    left: 99px;
+  }
+
+  100% {
+    top: 95px;
+    left: 64px;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+}
+
+@-ms-keyframes bot-critter {
+  0% {
+    top: 100px;
+    left: 99px;
+  }
+
+  100% {
+    top: 95px;
+    left: 64px;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+}
+
+@keyframes bot-critter {
+  0% {
+    top: 100px;
+    left: 99px;
+  }
+
+  100% {
+    top: 95px;
+    left: 64px;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+}
+
 .background.accuplex {
   max-width: 267px;
   margin: 12%;
