chemistry - animation - added initial files

--- a/css-sass/view/animation/_base.scss
+++ b/css-sass/view/animation/_base.scss
@@ -87,7 +87,7 @@
 }
 
 //@import "urine";
-//@import "chemistry";
+@import "chemistry";
 @import "cbc";
 @import "ova-parasite";
 @import "accuplex";
