--- a/css/screen.css
+++ b/css/screen.css
@@ -4372,6 +4372,269 @@ span.placeholder {
   display: block;
 }
 
+.animation {
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  height: 1024px;
+  width: 100%;
+  background: transparent;
+}
+.animation .background.chemistry {
+  background-color: #2759B9;
+  width: 100%;
+  height: 100%;
+}
+.animation .background.chemistry .sticker {
+  padding: 20%;
+  margin: 0 auto;
+  position: relative;
+  z-index: 0;
+}
+.animation .background.chemistry .sticker img {
+  position: absolute;
+  margin: 0 auto;
+  text-align: center;
+  z-index: 3;
+  left: 22.3%;
+  top: 16.3%;
+}
+.animation .background.chemistry .sticker .glass {
+  height: 256px;
+  border-radius: 128px;
+  width: 245px;
+  z-index: 3;
+  position: relative;
+  overflow: hidden;
+  top: -145px;
+  left: 185px;
+  -webkit-animation-fill-mode: forwards;
+  -moz-animation-fill-mode: forwards;
+  -o-animation-fill-mode: forwards;
+  -ms-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
+  -ms-perspective: 1000px;
+  -o-perspective: 1000px;
+  perspective: 1000px;
+}
+.animation .background.chemistry .sticker .glass img {
+  left: 0;
+  top: 0;
+}
+.animation .background.chemistry .sticker .glass .paw {
+  background: #FFF;
+  width: 233px;
+  height: 233px;
+  background-size: cover;
+  overflow: hidden;
+  border-radius: 128px;
+  z-index: 2;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  left: 8px;
+}
+.animation .background.chemistry .sticker .glass .paw .map {
+  background: url("../images/animation/chemistry/paw.png") no-repeat transparent;
+  width: 228px;
+  height: 228px;
+  border-radius: 100%;
+  z-index: 1;
+  position: relative;
+  background-position: -250px -50px;
+  -webkit-animation-fill-mode: forwards;
+  -moz-animation-fill-mode: forwards;
+  -o-animation-fill-mode: forwards;
+  -ms-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
+  -ms-perspective: 1000px;
+  -o-perspective: 1000px;
+  perspective: 1000px;
+}
+.animation .background.chemistry .sticker.active .glass {
+  -webkit-animation-delay: 0ms;
+  -webkit-animation-duration: 4s;
+  -webkit-animation-name: glass;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease-in-out;
+  -moz-animation-delay: 0ms;
+  -moz-animation-duration: 4s;
+  -moz-animation-name: glass;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-timing-function: ease-in-out;
+  -ms-animation-delay: 0ms;
+  -ms-animation-duration: 4s;
+  -ms-animation-name: glass;
+  -ms-animation-iteration-count: 1;
+  -ms-animation-timing-function: ease-in-out;
+  -o-animation-delay: 0ms;
+  -o-animation-duration: 4s;
+  -o-animation-name: glass;
+  -o-animation-iteration-count: 1;
+  -o-animation-timing-function: ease-in-out;
+  animation-delay: 0ms;
+  animation-duration: 4s;
+  animation-name: glass;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+}
+.animation .background.chemistry .sticker.active .glass .paw .map {
+  -webkit-animation-delay: 100ms;
+  -webkit-animation-duration: 4s;
+  -webkit-animation-name: loop;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease-in-out;
+  -moz-animation-delay: 100ms;
+  -moz-animation-duration: 4s;
+  -moz-animation-name: loop;
+  -moz-animation-iteration-count: 1;
+  -moz-animation-timing-function: ease-in-out;
+  -ms-animation-delay: 100ms;
+  -ms-animation-duration: 4s;
+  -ms-animation-name: loop;
+  -ms-animation-iteration-count: 1;
+  -ms-animation-timing-function: ease-in-out;
+  -o-animation-delay: 100ms;
+  -o-animation-duration: 4s;
+  -o-animation-name: loop;
+  -o-animation-iteration-count: 1;
+  -o-animation-timing-function: ease-in-out;
+  animation-delay: 100ms;
+  animation-duration: 4s;
+  animation-name: loop;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+}
+
+@-webkit-keyframes glass {
+  0%, 100% {
+    top: -145px;
+    left: 185px;
+  }
+
+  35% {
+    top: -103px;
+    left: 50px;
+  }
+
+  66% {
+    top: -13px;
+    left: 80px;
+  }
+}
+
+@-moz-keyframes glass {
+  0%, 100% {
+    top: -145px;
+    left: 185px;
+  }
+
+  35% {
+    top: -103px;
+    left: 50px;
+  }
+
+  66% {
+    top: -13px;
+    left: 80px;
+  }
+}
+
+@-ms-keyframes glass {
+  0%, 100% {
+    top: -145px;
+    left: 185px;
+  }
+
+  35% {
+    top: -103px;
+    left: 50px;
+  }
+
+  66% {
+    top: -13px;
+    left: 80px;
+  }
+}
+
+@keyframes glass {
+  0%, 100% {
+    top: -145px;
+    left: 185px;
+  }
+
+  35% {
+    top: -103px;
+    left: 50px;
+  }
+
+  66% {
+    top: -13px;
+    left: 80px;
+  }
+}
+
+@-webkit-keyframes loop {
+  0%, 100% {
+    background-position: -250px -50px;
+  }
+
+  35% {
+    background-position: 30px -50px;
+  }
+
+  66% {
+    background-position: -100px -250px;
+  }
+}
+
+@-moz-keyframes loop {
+  0%, 100% {
+    background-position: -250px -50px;
+  }
+
+  35% {
+    background-position: 30px -50px;
+  }
+
+  66% {
+    background-position: -100px -250px;
+  }
+}
+
+@-ms-keyframes loop {
+  0%, 100% {
+    background-position: -250px -50px;
+  }
+
+  35% {
+    background-position: 30px -50px;
+  }
+
+  66% {
+    background-position: -100px -250px;
+  }
+}
+
+@keyframes loop {
+  0%, 100% {
+    background-position: -250px -50px;
+  }
+
+  35% {
+    background-position: 30px -50px;
+  }
+
+  66% {
+    background-position: -100px -250px;
+  }
+}
+
 .background.cbc {
   max-width: 338px;
   margin: 0 9% 0 24%;
