felv-fiv, t4, urine: animation - added initial files

--- a/css-sass/view/animation/_base.scss
+++ b/css-sass/view/animation/_base.scss
@@ -86,12 +86,11 @@
   }
 }
 
-//@import "urine";
+@import "urine";
 @import "chemistry";
 @import "cbc";
 @import "ova-parasite";
 @import "accuplex";
-//@import "felv";
-//@import "felvalternate";
-//@import "t4";
+@import "felv-fiv";
+@import "thyroxine";
 @import "heartworm";
