--- a/js/template/animation/Chemistry.html
+++ b/js/template/animation/Chemistry.html
@@ -1,8 +1,8 @@
 <div class="background chemistry">
 	<div class="sticker">
-		<img src="images/animation/chemistry/background.png" alt="animation" class="stamp">
+		<img src="images/animation/chemistry/background@2x.png" class="stamp" alt="" />
 		<div class="glass">
-			<img src="images/animation/chemistry/loupe.png" class="loupe" alt="">
+			<img src="images/animation/chemistry/loupe@2x.png" class="loupe" alt="" />
 			<div class="paw">
 				<div class="map"></div>
 			</div>
