thyroxine - animation - done

--- a/css-sass/view/animation/_thyroxine.scss
+++ b/css-sass/view/animation/_thyroxine.scss
@@ -1,65 +1,72 @@
 .background.t4 {
-	background-color:#E2850E;
-	width:100%;
-	height: 100%;
+	max-width: round(image-width("../images/animation/thyroxine/2x/background@2x.png") / 2);
+	margin: 0 10% 10% 11%;
 
 	.sticker {
-		width: 430px;
-		margin: 0 auto;
-		min-height: 500px;
 		position: relative;
 		z-index: 0;
-		img {
+
+		.bg {
+			display: block;
+		}
+
+		.part {
 			position: absolute;
-			margin: 0 auto;
-			text-align: center;
-			z-index: 3;
-			left: 22.3%;
-			top: 16.3%;
+
+			img {
+				position: absolute;
+				z-index: 3;
+			}
 		}
 		.lever {
-			position: relative;
-			top: 95px;
-			left: -45px;
+			top: 5%;
+			left: -17%;
+			width: 61%;
+			height: 35%;
 			@include transform(rotate(0deg));
 			z-index:3;
 			@include animation-fill(forwards);
-				@include perspective(1000px);
-				@include transform-origin(32px, 29px);
+			@include transform-origin(13%, 11%);
 		}
 		.gear-big {
-			position: relative;
-			top: 195px;
+			top: 44%;
 			display: block;
-			left: 8px;
+			left: 3%;
 			img {
 				&:nth-child(2) {
-					margin-left: 25px;
-					top: 26px;
+					top: 15%;
+					left: 16%;
+					width: 68%;
 				}
 			}
+			width: 67%;
+			height: 67%;
 		}
 		.gear-med {
-			position: relative;
-			top: 104px;
-			left: 131px;
+			top: 9%;
+			left: 51%;
 			img {
 				&:nth-child(2) {
-					margin-top: 23px;
-					margin-left: 25px;
+					top: 18%;
+					left: 21%;
+					width: 60%;
 				}
 			}
+			width: 47%;
+			height: 47%;
 		}
 		.gear-small {
-			position: relative;
-			top: 211px;
-			left: 207px;
+			top: 50%;
+			left: 80%;
 			img {
 				&:nth-child(2) {
-					margin-top: 21px;
-					margin-left: 20px;
+					top: 26%;
+					left: 25%;
+					width: 48%;
 				}
 			}
+			width: 33%;
+			height: 32%;
 		}
 		&.active {
 			.lever {
@@ -100,13 +107,13 @@
 
 @include keyframes(lever) {
 	0%, 100% {
-		top: 95px;
-		left: -45px;
+		top: 5%;
+		left: -17%;
 		@include transform(rotate(0deg));
 	}
 	25% {
-		top: 95px;
-		left: -45px;
+		top: 5%;
+		left: -17%;
 		@include transform(rotate(3deg));
 	}
 	50% {
