--- a/css/screen.css
+++ b/css/screen.css
@@ -5958,29 +5958,28 @@ span.placeholder {
 }
 
 .background.t4 {
-  background-color: #E2850E;
-  width: 100%;
-  height: 100%;
+  max-width: 261px;
+  margin: 0 10% 10% 11%;
 }
 .background.t4 .sticker {
-  width: 430px;
-  margin: 0 auto;
-  min-height: 500px;
   position: relative;
   z-index: 0;
 }
-.background.t4 .sticker img {
+.background.t4 .sticker .bg {
+  display: block;
+}
+.background.t4 .sticker .part {
   position: absolute;
-  margin: 0 auto;
-  text-align: center;
+}
+.background.t4 .sticker .part img {
+  position: absolute;
   z-index: 3;
-  left: 22.3%;
-  top: 16.3%;
 }
 .background.t4 .sticker .lever {
-  position: relative;
-  top: 95px;
-  left: -45px;
+  top: 5%;
+  left: -17%;
+  width: 61%;
+  height: 35%;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
@@ -5992,44 +5991,45 @@ span.placeholder {
   -o-animation-fill-mode: forwards;
   -ms-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-perspective: 1000px;
-  -moz-perspective: 1000px;
-  -ms-perspective: 1000px;
-  -o-perspective: 1000px;
-  perspective: 1000px;
-  -webkit-transform-origin: 32px 29px;
-  -moz-transform-origin: 32px 29px;
-  -ms-transform-origin: 32px 29px;
-  -o-transform-origin: 32px 29px;
-  transform-origin: 32px 29px;
+  -webkit-transform-origin: 13% 11%;
+  -moz-transform-origin: 13% 11%;
+  -ms-transform-origin: 13% 11%;
+  -o-transform-origin: 13% 11%;
+  transform-origin: 13% 11%;
 }
 .background.t4 .sticker .gear-big {
-  position: relative;
-  top: 195px;
+  top: 44%;
   display: block;
-  left: 8px;
+  left: 3%;
+  width: 67%;
+  height: 67%;
 }
 .background.t4 .sticker .gear-big img:nth-child(2) {
-  margin-left: 25px;
-  top: 26px;
+  top: 15%;
+  left: 16%;
+  width: 68%;
 }
 .background.t4 .sticker .gear-med {
-  position: relative;
-  top: 104px;
-  left: 131px;
+  top: 9%;
+  left: 51%;
+  width: 47%;
+  height: 47%;
 }
 .background.t4 .sticker .gear-med img:nth-child(2) {
-  margin-top: 23px;
-  margin-left: 25px;
+  top: 18%;
+  left: 21%;
+  width: 60%;
 }
 .background.t4 .sticker .gear-small {
-  position: relative;
-  top: 211px;
-  left: 207px;
+  top: 50%;
+  left: 80%;
+  width: 33%;
+  height: 32%;
 }
 .background.t4 .sticker .gear-small img:nth-child(2) {
-  margin-top: 21px;
-  margin-left: 20px;
+  top: 26%;
+  left: 25%;
+  width: 48%;
 }
 .background.t4 .sticker.active .lever {
   z-index: 3;
@@ -6161,8 +6161,8 @@ span.placeholder {
 
 @-webkit-keyframes lever {
   0%, 100% {
-    top: 95px;
-    left: -45px;
+    top: 5%;
+    left: -17%;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
@@ -6171,8 +6171,8 @@ span.placeholder {
   }
 
   25% {
-    top: 95px;
-    left: -45px;
+    top: 5%;
+    left: -17%;
     -webkit-transform: rotate(3deg);
     -moz-transform: rotate(3deg);
     -ms-transform: rotate(3deg);
@@ -6199,8 +6199,8 @@ span.placeholder {
 
 @-moz-keyframes lever {
   0%, 100% {
-    top: 95px;
-    left: -45px;
+    top: 5%;
+    left: -17%;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
@@ -6209,8 +6209,8 @@ span.placeholder {
   }
 
   25% {
-    top: 95px;
-    left: -45px;
+    top: 5%;
+    left: -17%;
     -webkit-transform: rotate(3deg);
     -moz-transform: rotate(3deg);
     -ms-transform: rotate(3deg);
@@ -6237,8 +6237,8 @@ span.placeholder {
 
 @-ms-keyframes lever {
   0%, 100% {
-    top: 95px;
-    left: -45px;
+    top: 5%;
+    left: -17%;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
@@ -6247,8 +6247,8 @@ span.placeholder {
   }
 
   25% {
-    top: 95px;
-    left: -45px;
+    top: 5%;
+    left: -17%;
     -webkit-transform: rotate(3deg);
     -moz-transform: rotate(3deg);
     -ms-transform: rotate(3deg);
@@ -6275,8 +6275,8 @@ span.placeholder {
 
 @keyframes lever {
   0%, 100% {
-    top: 95px;
-    left: -45px;
+    top: 5%;
+    left: -17%;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
@@ -6285,8 +6285,8 @@ span.placeholder {
   }
 
   25% {
-    top: 95px;
-    left: -45px;
+    top: 5%;
+    left: -17%;
     -webkit-transform: rotate(3deg);
     -moz-transform: rotate(3deg);
     -ms-transform: rotate(3deg);
