--- a/js/template/animation/Thyroxine.html
+++ b/js/template/animation/Thyroxine.html
@@ -1,24 +1,24 @@
 <div class="background t4">
 	<div class="sticker">
-		<img src="images/animation/thyroxine/1x/background.png" alt="">
+		<img src="images/animation/thyroxine/2x/background@2x.png" class="bg" alt="">
 
-		<div class="lever">
-			<img src="images/animation/thyroxine/1x/lever.png" alt="">
+		<div class="part lever">
+			<img src="images/animation/thyroxine/2x/lever@2x.png" alt="">
 		</div>
 
-		<div class="gear-big">
-			<img src="images/animation/thyroxine/1x/lrg-gear-outside.png" alt="">
-			<img src="images/animation/thyroxine/1x/lrg-gear-inside.png" alt="">
+		<div class="part gear-big">
+			<img src="images/animation/thyroxine/2x/lrg-gear-outside@2x.png" alt="">
+			<img src="images/animation/thyroxine/2x/lrg-gear-inside@2x.png" alt="">
 		</div>
 
-		<div class="gear-med">
-			<img src="images/animation/thyroxine/1x/med-gear.png" alt="">
-			<img src="images/animation/thyroxine/1x/med-gear-inside.png" alt="">
+		<div class="part gear-med">
+			<img src="images/animation/thyroxine/2x/med-gear@2x.png" alt="">
+			<img src="images/animation/thyroxine/2x/med-gear-inside@2x.png" alt="">
 		</div>
 
-		<div class="gear-small">
-			<img src="images/animation/thyroxine/1x/sm-gear.png" alt="">
-			<img src="images/animation/thyroxine/1x/sm-gear-inside.png" alt="">
+		<div class="part gear-small">
+			<img src="images/animation/thyroxine/2x/sm-gear@2x.png" alt="">
+			<img src="images/animation/thyroxine/2x/sm-gear-inside@2x.png" alt="">
 		</div>
 	</div>
 </div>
